# GraphLens

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  vercel.json
.github/workflows/: ci.yml
docs/: examples.md  mcp-setup.md
frontend/: graph.js  index.html  styles.css
frontend/api/: graph.json
graphlens/: __init__.py  benchmark.py  cli.py  doctor.py
graphlens/analysis/: __init__.py  blast_radius.py  communities.py  hubs.py  risk.py
graphlens/graph/: __init__.py  builder.py  diff.py  snapshot.py  storage.py  tokens.py  traversal.py
graphlens/mcp/: __init__.py  server.py
graphlens/parser/: __init__.py  languages.py  tree_sitter_parser.py
graphlens/viz/: __init__.py  server.py
graphlens/watch/: __init__.py  watcher.py
tests/: test_blast_radius.py  test_doctor_benchmark.py  test_graph.py  test_mcp_service.py  test_parser.py
tests/fixtures/sample_python/: app.py  test_app.py
tests/fixtures/sample_typescript/: index.ts
