[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "graphlens"
version = "0.1.0"
description = "MCP server that parses codebases into structural graphs for AI coding assistants."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "GraphLens" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "tree-sitter>=0.21",
  "tree-sitter-python",
  "tree-sitter-javascript",
  "tree-sitter-typescript",
  "tree-sitter-go",
  "tree-sitter-rust",
  "tree-sitter-java",
  "tree-sitter-ruby",
  "tree-sitter-php",
  "tree-sitter-c",
  "tree-sitter-cpp",
  "mcp>=1.0",
  "networkx>=3.0",
  "click>=8.0",
  "watchdog>=3.0",
  "leidenalg",
  "python-igraph",
  "rich",
  "graspologic",
  "tiktoken>=0.7",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
graphlens = "graphlens.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["graphlens"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
